# mcp_data_protect

./: .gitignore  AGENTS.md  LICENSE  README.md  ci.yml  company_data.csv  database.py  pyproject.toml  server.py  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-submission.yml  labeler.yml  pylint.yml
src/mcp_data_protect/: database.py  server.py
src/mcp_data_protect/scripts/: migrate_data.py
tests/: test_audit.py  test_database.py
