[project]
name = "mcp-data-protect"
version = "0.1.0"
description = "MCP Server for local LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
